--- a/Pipfile
+++ b/Pipfile
@@ -1,15 +1,14 @@
 [[source]]
 
-url = "https://pypi.python.org/simple"
+url = "https://pypi.doubanio.com/simple"
 verify_ssl = true
 name = "pypi"
-
 
 [packages]
 
 requests = "*"
-aiohttp = "*"
 lxml = "*"
+aiohttp = "*"
 
 
 [dev-packages]
