--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,13 @@ url = "https://pypi.doubanio.com/simple"
 verify_ssl = true
 name = "pypi"
 
+
 [packages]
 
 requests = "*"
 lxml = "*"
 aiohttp = "*"
+elasticsearch-dsl = "*"
 
 
 [dev-packages]
